--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,20 +11,28 @@ layout: default
   </div>
   <div class="about-header">
     {%- if site.moving.avatar_url -%}
-    <img class="about-avatar" src="{{ site.moving.avatar_url }}" />
+    <img class="about-avatar" style="height: 100%;" src="{{ site.moving.avatar_url }}" />
     {%- endif -%} {%- if site.author -%}
     <div class="about-info">
+
+      
       <div class="about-your-name">
         {{ site.author | escape }}
       </div>
       {%- endif -%} {%- if site.moving.about_you -%}
+
+      
       <p class="about-description">
         {{ site.moving.about_you | escape }}
       </p>
       {%- endif -%} {%- include social.html -%}
     </div>
   </div>
-
+  <div class="resume-link">
+    <a href="{{ '/assets/Matt_Qin_resume.pdf' | relative_url }}" target="_blank" class="black-link">
+      📄 View My Resume
+    </a>
+  </div>
   <div class="about-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
